nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-aio-mastercontainer
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-aio-mastercontainer
  template:
    metadata:
      labels:
        app: nextcloud-aio-mastercontainer
    spec:
      containers:
        - name: nextcloud-aio-mastercontainer
          image: nextcloud/all-in-one:latest
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: nextcloud-aio-mastercontainer
              mountPath: /mnt/docker-aio-config
            - name: docker-socket
              mountPath: /var/run/docker.sock
      volumes:
        - name: nextcloud-aio-mastercontainer
          persistentVolumeClaim:
            claimName: nextcloud-aio-mastercontainer
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
