nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-aio-mastercontainer
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-aio-mastercontainer
  ports:
    - name: admin
      port: 8080
      targetPort: 8080
    - name: nextcloud
      port: 11000
      targetPort: 11000
